force-app/main/default/objects/Booking_Checklist__c/Booking_Checklist__c.object-meta.xml
<CustomObject>
    <label>Booking Checklist</label>
    <nameField>
        <displayFormat>BWC-{000000}</displayFormat>
        <label>Booking Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>