force-app/main/default/objects/Booking_Checklist__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Booking Checklists</relationshipLabel>
    <relationshipName>Booking_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>