force-app/main/default/objects/Booking_Checklist__c/fields/Checklist_Status__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Status__c</fullName>
    <label>Checklist Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved by MIS</fullName>
            </value>
            <value>
                <fullName>Rejected by MIS</fullName>
            </value>
            <value>
                <fullName>Approved by RM</fullName>
            </value>
            <value>
                <fullName>Rejected by RM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>